# gcrypt-guile

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  guile-gcrypt.texi  guix.scm  pre-inst-env.in
gcrypt/: base16.scm  base64.scm  common.scm  hash.scm  hmac.scm  internal.scm  mac.scm  package-config.scm.in  pk-crypto.scm  random.scm  utils.scm
tests/: base16.scm  base64.scm  hash.scm  hmac.scm  mac.scm  pk-crypto.scm
